@@ -29,7 +29,8 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
   * Fixed a bug with Xchat::print that prevents printing out a
     single 0(Lian Wan Situ)
   * Fixed a bug in Xchat::get_prefs that was clobbering the stack(Sergio Luis)
-
+  * Allow scripts that use a non-existent function for the shutdown callback
+    to be unloaded(Lian Wan Situ)
 
 ----------------------------------------------------------------------
  2.6.4 - 08/Jun/2006
